--- a/docs/_includes/author.html
+++ b/docs/_includes/author.html
@@ -1,9 +1,9 @@
 <section class="author">
-  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/Taffy.jpg)"></div>
+  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/Victor.png)"></div>
   <div class="authorinfo box">
-    <p>Author | David Lin</p>
+    <p>Author | Victor Lee</p>
     <p class="bio">
-      Currently a Ph.D. student in Singapore University of Technology and Design in the area of Human-Computer Interaction(HCI).
+      A passionate iOS developer, with curious mind and constant learning attitude. Most of life living in Taipei, my home town, as a iOS developer and STEM educator.
     </p>
   </div>
 </section>
